alteraçao do html

--- a/HTML/Desafio.html
+++ b/HTML/Desafio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Desafio.css">
-    <title>Desafio Git CSS</title>
+    <title>Desafio Git </title>
 </head>
 
 <body>
